<resources>
    <string name="app_name">Housing for Agents</string>
    <string name="bullet">●</string>
    <string name="add_property_title">Add Property</string>
    <string name="add_property">Add Property</string>
    <string name="edit_property">Edit Property</string>
    <string name="post_call_widget_text_sample">Add phone number or take further action?</string>
    <string name="post_call_widget_text_before">Add</string>
    <string name="post_call_widget_text_after">as a business contact?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_lead">Add Lead</string>
    <string name="edit_lead">Edit Lead</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_optional_email">Email (Optional)</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="label_continue">Continue</string>
    <string name="generic_error_message">Something went wrong. Please try later.</string>
    <string name="label_looking_to">IS LOOKING TO</string>
    <string name="label_rent">Rent</string>
    <string name="label_buy">Buy</string>
    <string name="budget">BUDGET *</string>
    <string name="rupee_sign">₹</string>
    <string name="rent">Rent</string>
    <string name="sale">Sell</string>
    <string name="invalid_email_message">Please enter a valid email address</string>
    <string name="label_add_more_properties">Add More Properties</string>
    <string name="button_done">Done</string>
    <string name="capital_done">DONE</string>
    <string name="property_for_label">THIS PROPERTY IS FOR</string>
    <string name="bhk_label">BHK *</string>
    <string name="rk1">1 RK</string>
    <string name="bhk1">1 BHK</string>
    <string name="rk2">2 RK</string>
    <string name="bhk2">2 BHK</string>
    <string name="bhk3">3 BHK</string>
    <string name="bhk3Plus">3+ BHK</string>
    <string name="address_label">ADDRESS / LANDMARK</string>
    <string name="bachelor_label">Bachelor</string>
    <string name="family_label">Family</string>
    <string name="company_label">Company</string>
    <string name="lease_type_label">Tenant Type</string>
    <string name="address_hint">Address or Landmark near this property</string>
    <string name="label_locations">LOCATIONS *</string>
    <string name="available_from_label">Available From*</string>
    <string name="date_hint">Select a date</string>
    <string name="apartment_label">Apartment</string>
    <string name="independent_house_label">Independent House</string>
    <string name="independent_floor_label">Independent Floor</string>
    <string name="locality_auto_suggest_hint">What areas is this lead interested in?</string>
    <string name="property_type_label">Property Type</string>
    <string name="furnishing_label">Furnishing</string>
    <string name="furnish_type_none">None</string>
    <string name="furnish_type_semi">Semi</string>
    <string name="furnish_type_fully">Fully</string>
    <string name="builtup_area_hint">Builtup area of the property</string>
    <string name="builtuparea_sqft_label">sqft.</string>
    <string name="builtup_area_label">Builtup Area</string>
    <string name="notes_label">Notes</string>
    <string name="notes_hint">You can write any notes about this property.</string>
    <string name="security_deposit_label">Security Deposit</string>
    <string name="empty_name_message">Please specify the name of lead</string>
    <string name="empty_number_message">Please specify the phone number of lead</string>
    <string name="north_label">North</string>
    <string name="east_label">East</string>
    <string name="south_label">South</string>
    <string name="west_label">West</string>
    <string name="facing_label">Facing</string>
    <string name="expanded_add_more_details">- ADD MORE DETAILS</string>
    <string name="collapsed_add_more_details">+ ADD MORE DETAILS</string>
    <string name="desc_edit_contact_image">Click to edit contact details</string>
    <string name="price_label">Price</string>
    <string name="locality_label">Locality *</string>
    <string name="locality_property_hint">In which area is this property in?</string>
    <string name="lead_src_label">SOURCE</string>
    <string name="lead_src_hint">Where did this lead come from?</string>
    <string name="no_leads_header">No Leads added!</string>
    <string name="no_leads_message">Add leads to call, set reminders and share matching properties.</string>
    <string name="no_owners_header">No Owners Added!</string>
    <string name="no_owners_message">Add owners to call, set reminders and manage their properties.</string>
    <string name="no_agents_header">No Agents Added!</string>
    <string name="no_agents_message">A strong Agent Network = More Business!\nAdd agents to call, set reminders and share properties and requirements.</string>
    <string name="my_properties">My Properties</string>
    <string name="desc_image_property">Image of property</string>
    <string name="post_call_message_saved_lead_before">Do you want to take further action on</string>
    <string name="post_call_message_saved_lead_after"></string>
    <string name="no_properties_for_sell_header">No Properties for Sell</string>
    <string name="no_properties_for_sell_message">You don\'t have any properties added for Sell category</string>
    <string name="no_properties_for_rent_header">No Properties for Rent</string>
    <string name="no_properties_for_rent_message">You don\'t have any properties added for Rent category</string>
    <string name="properties_label">Properties</string>
    <string name="no_matching_properties_header">No Matching Properties!</string>
    <string name="no_matching_properties_message">You don’t have any properties that match to this lead’s requirements.</string>
    <string name="action_star">Star</string>
    <string name="you_just_spoke_label">You just spoke to</string>
    <string name="closed_leads">Closed Leads</string>
    <string name="inactive_leads">Inactive Leads</string>
    <string name="mark_as_active">Mark as Active</string>
    <string name="mark_as_inactive">Mark as Inactive</string>
    <string name="mark_as_closed">Mark as Closed</string>
    <string name="price_is_required">Price is required</string>
    <string name="rent_is_required">Rent is required</string>
    <string name="bhk_is_required">BHK is required</string>
    <string name="locality_is_required">Locality is required</string>
    <string name="call_label">Call</string>
    <string name="message_label">Message</string>
    <string name="notes_lead_hint">You can write any notes about this lead.</string>
    <string name="set_reminder_title">Set a Reminder</string>
    <string name="call_radio_button_label">Call</string>
    <string name="meet_radio_button_label">Meet</string>
    <string name="other_radio_button_label">Other</string>
    <string name="hint_enter_the_task">Enter the task here</string>
    <string name="button_next">Next</string>
    <string name="set_reminder">Save Reminder</string>
    <string name="matching_properties_message">Matching properties</string>
    <string name="matching_leads_message">Matching Leads</string>
    <string name="remind_to_label">Remind me to&#160;</string>
    <string name="task_detail_error_msg">Task is required.</string>
    <string name="reminder_date_error_message">Date is required.</string>
    <string name="reminder_time_error_msg">Time is required.</string>
    <string name="time_future_error">Time should be in future.</string>
    <string name="remind_to__ellipsis_label">Remind me to</string>
    <string name="hint_edit_rent_lead_notes">Eg: flat/society amenities, other preferences, payment details etc.</string>
    <string name="hint_edit_sale_lead_notes">Eg: projects/builder preference, society amenities, payment details etc.</string>
    <string name="hint_edit_agent_notes">You can write any notes about this agent.</string>
    <string name="menu_dashboard">Home</string>
    <string name="menu_my_contacts">My Contacts</string>
    <string name="menu_my_properties">My Properties</string>
    <string name="menu_my_reminders">Reminders</string>
    <string name="reminders">Reminders</string>
    <string name="no_reminders_title">No reminders!</string>
    <string name="no_reminders_label">No reminders</string>
    <string name="no_reminders_message">Never forget a meeting, call or any other task! You will be alerted in time.</string>
    <string name="at_with_elipsis"><![CDATA[</font> at ...]]></string>
    <string name="terms_of_use_prefix">By signing up you agree to</string>
    <string name="edit">Edit</string>
    <string name="details_label">Details</string>
    <string name="dashboard_zero_state_text">Welcome to your Smart Diary.\nAdd and Manage your Leads and Properties.</string>
    <string name="splash_setting_up">App setup in progress.</string>
    <string name="add_a_contact">Add a Contact</string>
    <string name="add_a_property">Add a Property</string>
    <string name="delete">Delete</string>
    <string name="reminder_deleted">Reminder Deleted</string>
    <string name="floating_action_reminder_label">+ Reminder</string>
    <string name="floating_action_contact_label">+ Contact</string>
    <string name="floating_action_property_label">+ Property</string>
    <string name="sign_in">Sign in or Register</string>
    <string name="password">Password</string>
    <string name="phone_number_hint">+(91)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">REGISTER</string>
    <string name="password_error">Enter Password</string>
    <string name="logging_in">Please wait while we are logging you in the application.</string>
    <string name="verify_phone_progress_msg">Please wait while we check the status of your phone number.</string>
    <string name="registration_progress_message">Please wait while we are signing you up.</string>
    <string name="please_wait_message">Please wait...</string>
    <string name="activity_label">Activity</string>
    <string name="edit_property_details_label">Edit property details</string>
    <string name="hint_edit_property_notes">You can write any notes about this property.</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_mobile_number">Mobile No.</string>
    <string name="hint_area_of_operation">Area of Operation</string>
    <string name="privacy_policy_title">Privacy Policy.</string>
    <string name="negotiable">Negotiable</string>
    <string name="save_and_upload">SAVE &amp; UPLOAD</string>
    <string name="self_upload_dashboard_property_detail_title">Property Details</string>
    <string name="self_upload_dashboard_commercials_title">Price &amp; Commercials</string>
    <string name="self_upload_dashboard_property_detail_sub_title">Enter Location, Area, Amenities etc.</string>
    <string name="self_upload_dashboard_commercials_sub_title">Price, Brokerage, Built-up-Area etc.</string>
    <string name="self_upload_dashboard_photos_title">Photos</string>
    <string name="self_upload_dashboard_photos_sub_title">Add photos of your property</string>
    <string name="save_and_proceed">SAVE &amp; PROCEED</string>
    <string name="price_hint">Ex. 85.5</string>
    <string name="price">Price*</string>
    <string name="brokerage_hint">Enter brokerage</string>
    <string name="percentage">%</string>
    <string name="brokerage">Brokerage</string>
    <string name="society_move_in_charges">Society move-in charges*</string>
    <string name="built_up_area_hint">Built-up Area of the property</string>
    <string name="built_up_area">Built-up Area*</string>
    <string name="carpet_area_hint">Carpet Area of the property</string>
    <string name="carpet_area">Carpet Area*</string>
    <string name="date_select_hint">dd / mm / yyyy</string>
</resources>