<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/self_upload_toolbar" />

    <TextView
        android:id="@+id/dashboard_layout_view"
        android:layout_width="1dp"
        android:layout_height="32dp"
        android:layout_alignBottom="@id/toolbar_layout"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/dashboard_action_button"
        style="@style/ButtonGreenRounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save_and_upload" />

    <ProgressBar
        android:id="@+id/dashboard_progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_6dp"
        android:layout_alignTop="@id/dashboard_action_button"
        android:background="@color/gray"
        android:progressDrawable="@drawable/selfupload_progress_drawable" />

    <LinearLayout
        android:id="@+id/dashboard_cards_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/dashboard_progress_bar"
        android:layout_alignTop="@id/dashboard_layout_view"
        android:layout_margin="8dp"
        android:background="@drawable/dashboard_cards_list_background"
        android:orientation="vertical"
        android:showDividers="middle">

        <RelativeLayout android:id="@+id/self_upload_dashboard_details_card"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/self_upload_card_background"
            android:padding="@dimen/dimen_24dp">

            <ImageView
                android:id="@+id/self_upload_dashboard_details_card_status_image"
                style="@style/SelfUploadStatusImageStyle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/self_upload_dashboard_details_card_status_image"
                android:layout_toStartOf="@id/self_upload_dashboard_details_card_status_image"
                android:orientation="vertical">

                <TextView
                    style="@style/SelfUploadDashboardCardTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/self_upload_dashboard_property_detail_title" />

                <EditText
                    android:id="@+id/self_upload_dashboard_details_card_sub_title"
                    style="@style/SelfUploadDashboardCardSubTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:ellipsize="end"
                    android:enabled="false"
                    android:hint="@string/self_upload_dashboard_property_detail_sub_title" />
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout android:id="@+id/self_upload_dashboard_commercials_card"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/self_upload_card_background"
            android:padding="@dimen/dimen_24dp">

            <ImageView
                android:id="@+id/self_upload_dashboard_commercials_card_status_image"
                style="@style/SelfUploadStatusImageStyle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/self_upload_dashboard_commercials_card_status_image"
                android:layout_toStartOf="@id/self_upload_dashboard_commercials_card_status_image"
                android:orientation="vertical">

                <TextView
                    style="@style/SelfUploadDashboardCardTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/self_upload_dashboard_commercials_title" />

                <EditText
                    android:id="@+id/self_upload_dashboard_commercials_card_sub_title"
                    style="@style/SelfUploadDashboardCardSubTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:ellipsize="end"
                    android:hint="@string/self_upload_dashboard_commercials_sub_title" />
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout android:id="@+id/self_upload_dashboard_photos_card"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/self_upload_card_background"
            android:padding="@dimen/dimen_24dp">

            <ImageView
                android:id="@+id/self_upload_dashboard_photos_card_status_image"
                style="@style/SelfUploadStatusImageStyle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/self_upload_dashboard_photos_card_status_image"
                android:layout_toStartOf="@id/self_upload_dashboard_photos_card_status_image"
                android:orientation="vertical">

                <TextView
                    style="@style/SelfUploadDashboardCardTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/self_upload_dashboard_photos_title" />

                <EditText
                    android:id="@+id/self_upload_dashboard_photos_card_sub_title"
                    style="@style/SelfUploadDashboardCardSubTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:ellipsize="end"
                    android:hint="@string/self_upload_dashboard_photos_sub_title" />
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>